[project]
name = "plurity-audit-mcp"
version = "0.1.0"
description = "MCP server for the Plurity GEO Audit API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.8.1",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
plurity-audit-mcp = "plurity_audit_mcp.server:main"
plurity-audit-mcp-setup = "plurity_audit_mcp.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plurity_audit_mcp"]
